# render

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  builder.py  colab.ipynb  cubemarch.py  fit_tiny_nerf.py  jax_render.py  objects.py  pyproject.toml  raymarch.py  render.py  requirements-colab.txt  requirements-dev.txt  requirements.txt  sandbox_tiny_nerf.py  scene.json  setup.py  test.py  tests.py  utils.py
notebooks/: colab.ipynb
requirements/: requirements-colab.txt  requirements.txt
scenes/: airpods.yml  cornell_box.yml  potion.yml  scene.yml  snowman.yml
utils/: linalg.py  mlp.py  plot.py
