[project]
name = "render"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "dash==2.11.1",
    "numpy==1.25.0",
    "plotly==5.15.0",
    "dash-bootstrap-components==1.2.1",
    "jax[cpu]==0.4.13",
    "jaxtyping==0.2.20",
    "typeguard==4.0.0",
    "PyYAML==6.0",
    "Pillow==9.5.0",
    "setuptools"
]

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
line-length = 100
